# CoreLangDistribution-2.0

./: .gitignore  ALPHA50_2_CORRECTED_FINAL_REPORT.md  ALPHA50_2_MIT_FINALIZATION.md  ALPHA51_1_RELEASE_NOTES.md  ALPHA51_2_1_VERSION_STRING_POLISH_PLAN.md  ALPHA51_2_METADATA_CLEANUP_PLAN.md  ALPHA52_ARTIFACT_PROVIDER_README.md  ALPHA53_TRUST_MODEL_PROVIDER_POLICY_PLAN.md  BENCHMARK_PLAN.md  CHANGELOG.md  CLI.md  CODEX_CHANGELOG_CLD2_ALPHA56_3.md  CONTRIBUTING.md  FORMAT_CLD2.md  FUNDING.yml  HOW_TO_USE_CLD2_ALPHA56_3.md  INDEX_ALPHA56.md  LICENSE  MANIFEST.sha256  MANIFEST_RECOVERY_FILES.json  NEXT_STEPS_AFTER_ALPHA55.md  PATCH_NOTE_CLD2_ALPHA56_3.md  README.md  README_ALPHA51_1.md  README_ALPHA55_PUBLIC_EXAMPLES_PACK.md  SECURITY.md  SPEC_CLD2.md  TEST_RESULTS_ALPHA50_2_GITHUB_REPO_CANDIDATE_MIT.json  TEST_RESULTS_ALPHA50_2_MIT_FINALIZATION.json  TEST_RESULTS_ALPHA56_1_POLISH.json  TEST_RESULTS_ALPHA56_INTEGRATION.json  THREAT_MODEL.md  cld2.py  pyproject.toml
.github/: FUNDING.yml
corelangdistribution2/: __init__.py  bench.py  chunker.py  codec.py  hashutil.py  http_range.py  profiles.py  release.py  repo.py  selftest.py  server.py
data/: benchmark_matrix_alpha45_49.csv  benchmark_matrix_alpha45_49.json
docs/: ALPHA51_1_CLAIM_BOUNDARY.md  ALPHA51_1_CLASSIFICATION.md  ALPHA51_1_USAGE_WINDOWS.md  ALPHA51_2_1_VERSION_STRING_POLISH.md  ALPHA51_2_METADATA_CLEANUP.md  ALPHA52_1_ARTIFACT_PROVIDER_FIX.md  ALPHA52_ARTIFACT_PROVIDER_SPEC.md  ALPHA52_WHEN_TO_USE_AS_PROVIDER.md  ALPHA53_CLAIM_BOUNDARY.md  ALPHA53_PROVIDER_POLICY_SPEC.md  ALPHA53_PROVIDER_TRUST_MODEL.md  (+35 more)
(+57 files in other folders)
