[project]
name = "corelangdistribution2-alpha"
version = "2.0.0-alpha50.2"
description = "CoreLangDistribution 2.0 alpha45.8 MinIO retry attach"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = ["cryptography>=41"]

[project.optional-dependencies]
zstd = ["zstandard>=0.22"]

[tool.ruff]
line-length = 120
